--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: auto;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-input-placeholder {
+    text-align: center;
+}
+
+body {
+    font-family: "montseratt", sans-serif;
+}
+.app {
+    max-width: 80vh;
+    /* min-width: 80vh; */
+    background-image: url(./assets/images/night.webp);
+    background-size: cover;
+    background-position: bottom;
+    transition: 0.5 ease;
+}
+
+.day {
+    background-image: url(./assets/images/after_noon.webp);
+}
+
+main {
+    min-height: 100vh;
+    padding: 25px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
+}
+
+.search-box {
+    width: 100%;
+    margin: 0 0 60px;
+}
+
+.search-box .search-bar {
+    display: block;
+    width: 100%;
+    padding: 10px;
+
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+
+    /* margin-top: 20px; */
+
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 0px 16px 0px 16px;
+
+    box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+
+    color: #313131;
+    font-size: 20px;
+
+    transition: 0.4s ease;
+}
+
+.search-box .search-bar:focus {
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.weather {
+    /* background-color: beige; */
+    /* flex-flow: column wrap; */
+}
+
+.weather-image {
+    filter: invert(100%);
+}
+
+.weather-image img {
+    width: 20%;
+}
+
+h1,
+h3,
+h2 {
+    color: white;
+}
+
+.temp {
+    min-width: 10em;
+    border: 3px solid whitesmoke;
+    border-radius: 20px 20px 20px 20px;
+
+    /* background-color: blue; */
+}
+
+.temp > b {
+    font-size: 5em;
+    font-family: ui-monospace;
+    color: whitesmoke;
+}
+
+.max-min {
+    margin: 10px 0px 20px 0px;
+    font-size: 1.5em;
+    color: whitesmoke;
+}
+
+.no-data {
+    display: flex;
+    justify-content: center;
+    color: thistle;
+    font-size: 1.5em;
+    font-style: italic;
+    font-family: monospace;
 }
